Terminate GPU process via ExitProcess rather than RunLoop::QuitCurrent.

Quitting the RunLoop with QuitCurrent*Deprecated() triggers the DCHECK
against mixing the deprecated quit APIs with use of QuitClosure.

Use the GpuServiceImpl::ExitProcess() helper to quit the process
gracefully, instead.

Also removes the |is_exiting_| flag in favour of checking whether
|exit_callback_| is set, and adds a DCHECK for a non-null
|exit_callback| being passed at construction.

Bug: 882068
Cq-Include-Trybots: luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Id8a87e4648fbac3283f41ce2f80cf03a153227ab
Reviewed-on: https://chromium-review.googlesource.com/1214750
Commit-Queue: Wez <wez@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590061}