components/viz/service/gl/gpu_service_impl.h
@@ -302,7 +302,6 @@ class VIZ_SERVICE_EXPORT GpuServiceImpl : public gpu::GpuChannelManagerDelegate,
 
   // Callback that safely exits GPU process.
   base::OnceClosure exit_callback_;
-  bool is_exiting_ = false;
 
   base::Time start_time_;
 
